# verisage.xyz

./: .dockerignore  .env.example  .env.testnet  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  rofl.yaml  start-server.sh  start-worker.sh
.github/: CODEOWNERS
.github/workflows/: e2e-tests.yml  lint.yml  reproducibility-docker.yml  reproducibility-rofl.yml  reproducibility.yml
frontend-src/: .env.example  .gitignore  README.md  eslint.config.js  index.html  main.js  package-lock.json  package.json  vite.config.js
frontend-src/public/: _headers
scripts/: build_and_push_container_image.sh  check_models.py  verify_container_image.sh
src/: agent.py  config.py  job_store.py  main.py  models.py  oracle.py  scoring.py  signing.py  workers.py
src/llm_clients/: base.py  claude.py  gemini.py  mock.py  openai.py  perplexity.py
static/: style.css
tests/e2e/: .env.example  .env.test-mock  .env.test-payments  README.md  pyproject.toml  test-e2e-payments.sh  test-e2e.sh  test_payments.py
tests/eval_prompts/: test_cases.json  test_prompts  test_prompts.py
tests/eval_prompts/test_results/: docker_logs_20251031_102907.txt  docker_logs_20251031_112443.txt  report_20251031_102553.json  report_20251031_102907.json  report_20251031_112443.json  summary_20251031_102553.txt  summary_20251031_102907.txt  summary_20251031_112443.txt
tests/providers/: test_claude_client.py  test_gemini_client.py  test_openai_client.py  test_perplexity_client.py
tests/unit/: test_models.py  test_scoring.py  test_signing.py
(+4 files in other folders)
